@@ -76,10 +76,10 @@ EXTRA_DIST = \
 	iter_ALT/mod/plug_in_sinus_iter_ALT.inc			\
 	iter_ALT/mod/plug_in_solid_noise_iter_ALT.inc		\
 	iter_ALT/mod/plug_in_sparkle_iter_ALT.inc		\
-	iter_ALT/old/Colorify_iter_ALT.inc			\
 	iter_ALT/old/plug_in_CentralReflection_iter_ALT.inc	\
 	iter_ALT/old/plug_in_anamorphose_iter_ALT.inc		\
 	iter_ALT/old/plug_in_blur2_iter_ALT.inc			\
+	iter_ALT/old/plug-in_colorify_iter_ALT.inc		\
 	iter_ALT/old/plug_in_encript_iter_ALT.inc		\
 	iter_ALT/old/plug_in_figures_iter_ALT.inc		\
 	iter_ALT/old/plug_in_gflare_iter_ALT.inc		\
